[gd_scene load_steps=5 format=2]

[ext_resource path="res://image/ray.png" type="Texture" id=1]
[ext_resource path="res://script/ray.gd" type="Script" id=2]
[ext_resource path="res://image/emote_exclamation.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 56 )

[node name="ray" type="Area2D"]
scale = Vector2( 2.80716, 2.80716 )
collision_layer = 64
script = ExtResource( 2 )

[node name="textBalloon" type="Sprite" parent="."]
position = Vector2( -0.356232, -133.587 )
scale = Vector2( 0.78515, 0.78515 )
texture = ExtResource( 3 )

[node name="raySprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 14, 235 )

[node name="sensor" type="RayCast2D" parent="."]
position = Vector2( 0, -131.806 )
scale = Vector2( 2.16844, 1 )
enabled = true
cast_to = Vector2( 0, 264.324 )

[node name="sensor2" type="RayCast2D" parent="."]
position = Vector2( 0, -131.806 )
scale = Vector2( 2.16844, 1 )
enabled = true
cast_to = Vector2( 0, 264.324 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1, 2.09719 )
shape = SubResource( 1 )

[node name="rayTimer" type="Timer" parent="."]
one_shot = true

[node name="textBalloonTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="smallTimer" type="Timer" parent="textBalloonTimer"]
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_ray_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ray_body_exited"]
[connection signal="gameOver" from="." to="." method="_on_ray_gameOver"]
[connection signal="timeout" from="rayTimer" to="." method="_on_rayTimer_timeout"]
[connection signal="timeout" from="rayTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="textBalloonTimer" to="." method="_on_textBalloonTimer_timeout"]
[connection signal="timeout" from="textBalloonTimer/smallTimer" to="." method="_on_smallTimer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
